--- a/less/custom-style.less
+++ b/less/custom-style.less
@@ -200,8 +200,13 @@ div.kontinentkarten {
 			font-size: 29px;
 		}
 	}
-	p {
-
+	p.anweisung {
+		font-size: 15px;
+		color: white;
+		z-index: 50;
+		position: absolute;
+		top: 20px;
+		left: 20px;
 	}
 	img {
 		width: 100%;
@@ -287,49 +292,9 @@ div.kontinentkarten {
 	float: left;
 	padding-right: 5px;
 }
-
-/* entire container, keeps perspective */
-.flip-container {
-	perspective: 1000;
-}
-	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
-
-.flip-container, .front, .back {
-	width: 100%;
-	height: auto;
-	cursor: pointer;
-}
-
-/* flip speed goes here */
 .flipper {
-	transition: 0.6s;
-	transform-style: preserve-3d;
-
-	position: relative;
-}
-
-/* hide back of pane during swap */
-.front, .back {
-	backface-visibility: hidden;
-
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-/* front pane, placed above back */
-.front {
-	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
-}
-
-/* back, initially hidden pane */
-.back {
-	transform: rotateY(180deg);
+	width: 100%;
+	height: 100%;
 }
 
 
