--- a/less/custom-style.less
+++ b/less/custom-style.less
@@ -28,9 +28,9 @@
  * © 2015 MyFonts Inc
 */
 
-
+ 
 /* @import must be at top of file, otherwise CSS will not work */
-@import url("//hello.myfonts.net/count/2e5ddf");
+@import url('http://hello.myfonts.net/count/2e5ddf');
 
   
 @font-face {font-family: 'SamoSans';font-weight: normal;font-style: italic;src: url('../samo/2E5DDF_0_0.eot');src: url('../samo/2E5DDF_0_0.eot?#iefix') format('embedded-opentype'),url('../samo/2E5DDF_0_0.woff2') format('woff2'),url('../samo/2E5DDF_0_0.woff') format('woff'),url('../samo/2E5DDF_0_0.ttf') format('truetype'),url('../samo/2E5DDF_0_0.svg#wf') format('svg');}
@@ -108,7 +108,7 @@ nav .menu {
         li {
             display: block;
             float: left;
-            width: ~"calc(100% / 7)";
+            width: ~"calc((99.999% / 7))";
             a {
                 display: block;
                 float: left;
