--- a/less/custom-style.less
+++ b/less/custom-style.less
@@ -1,47 +1,47 @@
 /**
  * @license
  * MyFonts Webfont Build ID 3038687, 2015-06-08T14:10:31-0400
- * 
+ *
  * The fonts listed in this notice are subject to the End User License
- * Agreement(s) entered into by the website owner. All other parties are 
+ * Agreement(s) entered into by the website owner. All other parties are
  * explicitly restricted from using the Licensed Webfonts(s).
- * 
+ *
  * You may obtain a valid license at the URLs below.
- * 
+ *
  * Webfont: SamoSans-Italic by Carnoky Type
  * URL: http://www.myfonts.com/fonts/carnoky/samo-sans/italic/
- * 
+ *
  * Webfont: SamoSans-BoldItalic by Carnoky Type
  * URL: http://www.myfonts.com/fonts/carnoky/samo-sans/bold-italic/
- * 
+ *
  * Webfont: SamoSans-Bold by Carnoky Type
  * URL: http://www.myfonts.com/fonts/carnoky/samo-sans/bold/
- * 
+ *
  * Webfont: SamoSans-Regular by Carnoky Type
  * URL: http://www.myfonts.com/fonts/carnoky/samo-sans/regular/
- * 
- * 
+ *
+ *
  * License: http://www.myfonts.com/viewlicense?type=web&buildid=3038687
  * Licensed pageviews: 10,000
  * Webfonts copyright: Copyright (c) 2012 by Samuel Carnoky / CarnokyType. All rights reserved.
- * 
+ *
  * © 2015 MyFonts Inc
 */
 
- 
+
 /* @import must be at top of file, otherwise CSS will not work */
 @import url('http://hello.myfonts.net/count/2e5ddf');
 
-  
+
 @font-face {font-family: 'SamoSans';font-weight: normal;font-style: italic;src: url('../samo/2E5DDF_0_0.eot');src: url('../samo/2E5DDF_0_0.eot?#iefix') format('embedded-opentype'),url('../samo/2E5DDF_0_0.woff2') format('woff2'),url('../samo/2E5DDF_0_0.woff') format('woff'),url('../samo/2E5DDF_0_0.ttf') format('truetype'),url('../samo/2E5DDF_0_0.svg#wf') format('svg');}
 @font-face {font-family: 'SamoSans';font-weight: bold;font-style: italic;src: url('../samo/2E5DDF_1_0.eot');src: url('../samo/2E5DDF_1_0.eot?#iefix') format('embedded-opentype'),url('../samo/2E5DDF_1_0.woff2') format('woff2'),url('../samo/2E5DDF_1_0.woff') format('woff'),url('../samo/2E5DDF_1_0.ttf') format('truetype'),url('../samo/2E5DDF_1_0.svg#wf') format('svg');}
 @font-face {font-family: 'SamoSansBoldItalic';font-weight: bold;font-style: italic;src: url('../samo/2E5DDF_1_0.eot');src: url('../samo/2E5DDF_1_0.eot?#iefix') format('embedded-opentype'),url('../samo/2E5DDF_1_0.woff2') format('woff2'),url('../samo/2E5DDF_1_0.woff') format('woff'),url('../samo/2E5DDF_1_0.ttf') format('truetype'),url('../samo/2E5DDF_1_0.svg#wf') format('svg');}
 @font-face {font-family: 'SamoSans';font-weight: bold;font-style: normal;src: url('../samo/2E5DDF_2_0.eot');src: url('../samo/2E5DDF_2_0.eot?#iefix') format('embedded-opentype'),url('../samo/2E5DDF_2_0.woff2') format('woff2'),url('../samo/2E5DDF_2_0.woff') format('woff'),url('../samo/2E5DDF_2_0.ttf') format('truetype'),url('../samo/2E5DDF_2_0.svg#wf') format('svg');}
 @font-face {font-family: 'SamoSansBold';font-weight: bold;font-style: normal;src: url('../samo/2E5DDF_2_0.eot');src: url('../samo/2E5DDF_2_0.eot?#iefix') format('embedded-opentype'),url('../samo/2E5DDF_2_0.woff2') format('woff2'),url('../samo/2E5DDF_2_0.woff') format('woff'),url('../samo/2E5DDF_2_0.ttf') format('truetype'),url('../samo/2E5DDF_2_0.svg#wf') format('svg');}
 @font-face {font-family: 'SamoSans';font-weight: normal;font-style: normal;src: url('../samo/2E5DDF_3_0.eot');src: url('../samo/2E5DDF_3_0.eot?#iefix') format('embedded-opentype'),url('../samo/2E5DDF_3_0.woff2') format('woff2'),url('../samo/2E5DDF_3_0.woff') format('woff'),url('../samo/2E5DDF_3_0.ttf') format('truetype'),url('../samo/2E5DDF_3_0.svg#wf') format('svg');}
- 
-@import url('mp.less'); 
- 
+
+@import url('mp.less');
+
 @xs-min: 480px;
 @xs-max: (@sm-min - 1px);
 @sm-min: 768px;
@@ -89,17 +89,18 @@
 }
 
 .index {
-	font-weight: 200;	
+	font-weight: 200;
 }
 
 body {
 	font-family: "SamoSans", sans-serif;
 	padding-top: 15px;
+  margin-bottom: 50px;
 }
 
 nav .menu {
     width: 100%;
-    
+
     ul#navigation{
         width: 100%;
         list-style-type: none;
@@ -142,21 +143,21 @@ nav .menu {
 			width: 100%;
 
 			@media (min-width: @sm-min){
-				height: 172px;	
+				height: 172px;
 			}
 			@media (min-width: @md-min){
-				height: 200px;	
+				height: 200px;
 			}
 			@media (min-width: @lg-min){
-				height: 240px;	
+				height: 240px;
 			}
-			
+
 			&.height-x2 {
 				height: auto;
 				max-height: 100%;
 			}
 			&.text {
-				padding: 14px;	
+				padding: 14px;
 			}
 			&.bild {
 				padding: 0;
@@ -244,7 +245,11 @@ div.row.fliesstext {
 	    -moz-column-count: 2;
 	    column-count: 2;
 		}
-		
+		&.oc {
+      -webkit-column-count: 1;
+	    -moz-column-count: 1;
+	    column-count: 1;
+    }
     font-size: 18px;
 		padding: 10px 0;
 		color: rgb(90, 90, 90);
@@ -283,7 +288,7 @@ div.kontinentkarten {
 		height: auto;
 	}
 	> div {
-		
+
 	}
 	> div.text > .block {
 		@media (max-width: (@sm-min - 1)) {
@@ -322,16 +327,16 @@ div.kontinentkarten {
 	}
 	.block {
 		@media(min-width: @xs-min){
-			height: 232px;		
+			height: 232px;
 		}
 		@media(min-width: @sm-min){
-			height: 232px;		
+			height: 232px;
 		}
 		@media(min-width: @md-min){
-			height: 310px;		
+			height: 310px;
 		}
 		@media(min-width: @lg-min){
-			height: 377px;		
+			height: 377px;
 		}
 		overflow: hidden;
 	}
@@ -342,19 +347,19 @@ div.kontinentkarten {
 		color: rgb(102, 204, 51);
 		margin-bottom: 34px;
 	}
-	
+
 }
 
 .pano {
-	
+
 	@media(min-width: @sm-min) {
-		height: 700px; 
+		height: 700px;
 	}
 	@media(max-width: (@sm-min - 1)) {
 		height: 500px;
 		background-size: auto 500px;
 	}
-	cursor: pointer; 
+	cursor: pointer;
 }
 
 .lageplan {
