--- a/less/custom-style.less
+++ b/less/custom-style.less
@@ -234,6 +234,13 @@ div.row.fliesstext {
 	h1 {
 		color: rgb(102, 204, 51);
 	}
+	h2,table,p {
+		color: rgb(90, 90, 90);
+	}
+	td {
+		padding: 6px;
+		font-size: 16px;
+	}
 	p {
 		@media (min-width: @xs-min){
 			-webkit-column-count: 1;
@@ -252,7 +259,6 @@ div.row.fliesstext {
     }
     font-size: 18px;
 		padding: 10px 0;
-		color: rgb(90, 90, 90);
 	}
 }
 
