--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -602,7 +602,7 @@ nav .menu ul#navigation li a:hover {
   line-height: 1.4;
   padding: 0;
   margin: 0;
-  color: white;
+  color: #666666;
 }
 @media (min-width: 768px) {
   .row .intro .block > h2 {
@@ -641,25 +641,25 @@ nav .menu ul#navigation li a:hover {
   }
 }
 .row .intro .block p {
-  color: white;
-}
-.row .intro .block.gruen {
-  background-color: #85b44a;
-}
-.row .intro .block.orange {
-  background-color: #ffd238;
-}
-.row .intro .block.tuerkis {
-  background-color: #2c9992;
-}
-.row .intro .block.rot {
-  background-color: #c0124a;
-}
-.row .intro .block.violett {
-  background-color: #7b317b;
+  color: #666666;
 }
 .row.subrow {
   margin: 0;
+}
+.gruen {
+  background-color: #85b44a;
+}
+.orange {
+  background-color: #ffd238;
+}
+.tuerkis {
+  background-color: #2c9992;
+}
+.rot {
+  background-color: #c0124a;
+}
+.violett {
+  background-color: #7b317b;
 }
 div.row.fliesstext h1 {
   color: #66cc33;
@@ -823,6 +823,31 @@ div.kontinentkarten .block {
 .flipper {
   width: 100%;
   height: 100%;
+}
+.ticker-wrapper {
+  background-color: #85b44a !important;
+  border-radius: 0px !important;
+  width: 100% !important;
+  padding: 0px !important;
+  margin: 0px !important;
+}
+.ticker-wrapper .ticker {
+  width: 100% !important;
+  padding-left: 16px;
+  height: 32px !important;
+}
+.ticker-wrapper .ticker * {
+  color: white;
+}
+.ticker-wrapper * {
+  background-color: #6a903b !important;
+}
+div.row p.ticker-content {
+  font-size: 14px;
+}
+div.row p.ticker-content a {
+  font-weight: normal;
+  color: white;
 }
 .col-lg-1,
 .col-lg-10,
