--- a/style/style.less
+++ b/style/style.less
@@ -433,7 +433,8 @@ div.kontinentkarten {
 			padding-right: 14px;
 			div {
 				// justify-content: space-evenly;
-				width: 500px;
+				//width: 500px;
+				width: auto;
 				height: auto;
 				float: left;
 				margin: 14px 0px 14px;
