--- a/style/style.less
+++ b/style/style.less
@@ -480,3 +480,13 @@ div.kontinentkarten {
 		display: none;
 	}
 }
+
+.checklist li {
+	list-style-type: none;
+	&::before {
+		content: "\f14a";
+		font-family: 'FontAwesome';
+		margin-left: -36px;
+		margin-right: 18px;
+	}
+}
