--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,27 @@
   src: url('../samo/2E5DDF_3_0.eot');
   src: url('../samo/2E5DDF_3_0.eot?#iefix') format('embedded-opentype'), url('../samo/2E5DDF_3_0.woff2') format('woff2'), url('../samo/2E5DDF_3_0.woff') format('woff'), url('../samo/2E5DDF_3_0.ttf') format('truetype'), url('../samo/2E5DDF_3_0.svg#wf') format('svg');
 }
+/*!
+ *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
+ *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+ */
+/* FONT PATH
+ * -------------------------- */
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../fontawesome/fonts/fontawesome-webfont.eot?v=4.7.0');
+  src: url('../fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fontawesome/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fontawesome/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fontawesome/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fontawesome/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 /* Magnific Popup CSS */
 .mfp-bg {
   top: 0;
@@ -928,11 +949,40 @@ div.kontinentkarten .block {
 .news-container[v-cloak] {
   display: none;
 }
+@-webkit-keyframes fa-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+@keyframes fa-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
 .checklist li {
   list-style-type: none;
 }
 .checklist li::before {
   content: "\f14a";
+  font-family: 'FontAwesome';
+  margin-left: -36px;
+  margin-right: 18px;
+}
+.checklist li.inarbeit::before {
+  -webkit-animation: fa-spin 2s infinite linear;
+  animation: fa-spin 2s infinite linear;
+  position: absolute;
+  content: "\f013";
   font-family: 'FontAwesome';
   margin-left: -36px;
   margin-right: 18px;
